--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     margin-bottom: 75px;
 }
 
-.hero, footer {
+.hero {
     background: #1F2937;
     padding: 0 0 50px 0;
 }
@@ -206,4 +206,16 @@ h2 {
     color: #3882F6;
     cursor: pointer;
     border: 1px solid gray;
+}
+
+footer {
+    background-color: #1F2937;
+    padding: 20px 0;
+}
+
+footer .container {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
